Optimize AISCoverageGeoServerGenerator